landing page for recruiting

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,96 +1,96 @@
 audit_header: false
-title: '-- CLIENT BRAND --'
-description: >-
-  A Video Blog about -- MARKET -- Real Estate; It's industry, and the people
-  working in it. Whether you're just starting out, aspiring to begin, or been
-  working in the field for a few years, tune in to get updates, tips, tricks and
-  more!'
+title: -- CLIENT BRAND --
+description: A Video Blog about -- MARKET -- Real Estate; It's industry, and the people working in it. Whether you're just starting out, aspiring to begin, or been working in the field for a few years, tune in to get updates, tips, tricks and more!'
 show_custom_links: false
 custom_links:
   - title:
     url:
+
 client:
-  name: 'Team Leader: Paul Gillespie'
+  name: Seth and Alyce Dailey
   license_number:
-  about_markdown: >-
-    At Keller Williams Realty White Marsh/Perry Hall, we like to think we stand
-    out from other real estate firms in many ways, but these areas in particular
-    define Keller Williams Realty as an industry innovator and leader: Culture,
-    Education, Profit Share, and Technology. We are a company built and shaped
-    by talented, driven real estate professionals who know the value of having a
-    great career, accomplished colleagues, work-life balance, and a reputation
-    for being the best in the business.
+  about_markdown: |
+    The Dailey Group is comprised of a team of local real estate professionals committed to selling some of the most desired homes in Greater Baltimore Area. Selling these "right addresses" is the mission of The Dailey Group. Let us know what you're looking for. Please take advantage of the helpful tools on this website, including our exclusive Greater Baltimore Area Real Estate search, but also feel free to contact us personally.
   market: Baltimore
-  brand: Keller Williams Gateway
-  brokerage:
-  address: '8015 Corporate Drive, Suite C<br>Baltimore, MD 21236'
-  phone: 410-870-9508
+  brand: The Dailey Group
+  brokerage: Keller Williams Gateway
+  address: 8015 Corporate Drive, Suite C<br>Baltimore, MD 21236
+  phone: 443-267-2435
   phone_type: Direct
-  phone2: 443-318-8800
+  phone2: 800-214-1245
   phone2_type: Office
-  email: leadership@kwgatewayhomes.com
-  url: www.kwgatewayhomes.com
+  email: Hello@TheDaileyGroup.com
+  # email_type: Seth
+  # email2: Alyce@TheDaileyGroup.com
+  # email2_type: Alyce
+  url: http://TheDaileyGroup.com
+
 CTAs:
-  first_CTA_text: Request a Free Strategy Session
-  first_CTA_URL: 'http://www.joinkwgateway.com/'
-  VR_form: 'http://oi.vresp.com?fid=35206345f6'
+  first_CTA_text: Home Valuation
+  first_CTA_URL: https://www.thedaileygroup.com/home-valuation/
+  # second_CTA_text: Home Search
+  # second_CTA_URL: https://www.thedaileygroup.com/
+  VR_form: http://oi.vresp.com?fid=35206345f6
+
 sidebar_CTA:
   - CTA_image_path: /img/cta-images/006.jpg
-    CTA_title: Looking to Build Your Real Estate Career?
-    CTA_text: Let's talk about how we can take your business to new heights.
-    CTA_link_text: Request a Free Strategy Session
-    CTA_url: 'http://www.joinkwgateway.com/'
+    CTA_title: "Looking to Build Your Real Estate Career?"
+    CTA_text: "Let's talk about how we can take your business to new heights."
+    CTA_link_text: "Request a Free Strategy Session"
+    CTA_url: https://www.thedaileygroup.com/home-valuation/
+
+# second_sidebar_CTA:
+#   - CTA_image_path2: /img/cta-images/005.jpg
+#     CTA_title2: "Looking for a -- MARKET -- Home?"
+#     CTA_text2: "Search the entire MLS for your -- MARKET -- home."
+#     CTA_link_text2: "Search the MLS"
+#     CTA_url2: https://www.thedaileygroup.com/
+
 lender:
   show_section: false
   header_text: Preferred Lender
-  headshot_path: 'http://fillmurray.com/200/200'
+  headshot_path: http://fillmurray.com/200/200
   logo_path: /img/logo.png
   logo_path_2:
   name: Bill Murray
   brand: Lender Co.
   phone: 555-555-5555
   email: bill@murray.com
-  url: 'http://eyegoop.com'
+  url: http://eyegoop.com
+
 welcome_box:
   welcome_headline: How to Sell More Homes
   welcome_text_markdown: >
-    Whether you are just starting out, or you are licensed Broker, our team of
-    professionals can answer any questions you might have about real estate.
-    Subscribe to this blog to get the latest news on local market trends and
-    receive expert tips for buying or selling a home.
+    Whether you are just starting out, or you are licensed Broker, our team of professionals can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.
+
 socials:
   review_sm_icons: false
-  facebook_url: 'https://www.facebook.com/thedaileygroup'
-  linkedin_url: 'https://www.linkedin.com/company-beta/1257880/'
-  gplus_url: 'https://plus.google.com/b/115391039795230903679'
-  youtube_url: 'https://www.youtube.com/channel/UCyMYgJtDz9h4XkjT_4dh6OQ'
-  twitter_url: 'http://twitter.com/thedaileygroup'
+  facebook_url: https://www.facebook.com/thedaileygroup
+  linkedin_url: https://www.linkedin.com/company-beta/1257880/
+  gplus_url: https://plus.google.com/b/115391039795230903679
+  youtube_url: https://www.youtube.com/channel/UCyMYgJtDz9h4XkjT_4dh6OQ
+  twitter_url: http://twitter.com/thedaileygroup
   instagram_url:
   pinterest_url:
-  zillow_url: 'https://www.zillow.com/profile/The-Dailey-Group/'
-  trulia_url: >-
-    https://www.trulia.com/profile/the-dailey-group-agent-baltimore-md-zg1683nj/overview
-  yelp_url: 'https://www.yelp.com/biz/the-dailey-group-keller-williams-gateway-baltimore'
+  zillow_url: https://www.zillow.com/profile/The-Dailey-Group/
+  trulia_url: https://www.trulia.com/profile/the-dailey-group-agent-baltimore-md-zg1683nj/overview
+  yelp_url: https://www.yelp.com/biz/the-dailey-group-keller-williams-gateway-baltimore
   podcast_url:
+
 podcast:
   title: Baltimore Real Estate Careers Podcast with Seth and Alyce Dailey
-  categories:
-    - Education
+  categories: Education
   image: /img/podcast.jpg
-  subtitle: Boost your Career with Veteran Real Estate Agent -- CLIENT NAME --
-  description: >-
-    A Podcast about Baltimore Real Estate; It's industry, and the people working
-    in it. Whether you're just starting out, aspiring to begin, or been working
-    in the field for a few years, tune in to get updates, tips, tricks and more!
-  keywords: >-
-    -- MARKET -- Real Estate, Real Estate Careers, Real Estate Professionals,
-    Realtors, Real estate industry, how much do realtors make
+  subtitle: 'Boost your Career with Veteran Real Estate Agent -- CLIENT NAME --'
+  description: A Podcast about Baltimore Real Estate; It's industry, and the people working in it. Whether you're just starting out, aspiring to begin, or been working in the field for a few years, tune in to get updates, tips, tricks and more!
+  keywords: '-- MARKET -- Real Estate, Real Estate Careers, Real Estate Professionals, Realtors, Real estate industry, how much do realtors make'
   author: '-- CLIENT NAME --'
+
 images:
   client_headshot_path: /img/headshot.jpg
   hero_logo_path: /img/logo.png
   logo_width_number: 60
-  hero_text: '-- MARKET -- Real Estate Careers Video Blog'
+  hero_text: -- MARKET -- Real Estate Careers Video Blog
   hero_background_hex: '#094264'
   hero_image_path: /img/background.jpg
   post_cover: /img/cover.jpg
@@ -100,11 +100,13 @@ site_colors:
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
   main_body_text_color: '#353535'
+
 header_shadow:
   h_shadow: 0px
   w_shadow: 2px
   shadow_spread: 7px
-  shadow_color: '#000000'
+  shadow_color: black
+
 buttons:
   button_radius_number: 0
   button_padding_width_number: 10
