--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -55,6 +55,7 @@ images:
   post_cover: /img/cover.jpg
 site_colors:
   brand_color: '#094264'
+  accent_color: '#f6600f'
   theme_color: '#323232'
   theme_text_color: '#5d9bd3'
   main_body_color: '#ffffff'
