Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,7 +21,7 @@ client:
     career, accomplished colleagues, work-life balance, and a reputation for
     being the best in the business.
   market: Baltimore
-  brand: Keller Williams Gateway
+  brand:
   brokerage: 'Team Leader: Paul Gillespie'
   address: '8015 Corporate Drive, Suite C<br>Baltimore, MD 21236'
   phone: 410-870-9508
