--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -4,9 +4,9 @@ description: 'If you are looking to buy or sell a home, get all the information 
 show_custom_links: true
 custom_links:
   - title: Who We Are
-    url: / 
+    url: /who-we-are/
   - title: Neighborhoods
-    url: /
+    url: /neighborhoods/
   - title: Testimonials
     url: /client-testimonials/
 
