--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,7 +56,7 @@ socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/BreanneSteenRE'
   linkedin_url: 'https://www.linkedin.com/in/breannesteen'
-  gplus_url: 'https://plus.google.com/+BreanneSteenRealEstateSimiValley'
+  gplus_url: plus.google.com/+BreanneSteenRE
   youtube_url: 'http://www.youtube.com//c/BreanneSteenRealEstateSimiValley'
   twitter_url: 'https://twitter.com/breannesteen'
   instagram_url:
