--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,8 +56,8 @@ socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/BreanneSteenRE'
   linkedin_url: 'https://www.linkedin.com/in/breannesteen'
-  gplus_url: 'https://plus.google.com/b/115834841530728217064/115834841530728217064'
-  youtube_url: 'https://www.youtube.com/channel/UCvPfYx2IfLGK2QqSVoRERaQ/featured'
+  gplus_url: 'https://plus.google.com/115834841530728217064'
+  youtube_url: 'http://www.youtube.com//c/BreanneSteenRealEstateSimiValley'
   twitter_url: 'https://twitter.com/breannesteen'
   instagram_url:
   pinterest_url: 'http://www.pinterest.com/breannesteen'
