Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -79,7 +79,7 @@ podcast:
   categories: Education
   image: /img/podcast.jpg
   subtitle: 'Learn all the tips, tricks and more for buyers in the -- MARKET -- Area Real Estate Market'
-  description: 'If you are looking to buy a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Mortgage Lenders.'
+  description: 'Home loans in San Diego can be complex, but that doesn’t mean you should sign on the dotted line without explanations.'
   keywords: 'Houses for sale in -- MARKET --, mortgage tips, mortgage lender, financing a home, finance, home for sale, home buying, home buying process, property finder, property search, property, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
   author: '-- CLIENT NAME --'
 
