--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,10 +1,10 @@
 audit_header: false
 title: Mississippi Gulf Coast Real Estate Video Blog with Bryan David
 description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from -- CLIENT BRAND -- - your professional -- MARKET -- Real Estate Agents.'
-show_custom_links: false
+show_custom_links: true
 custom_links:
-  - title:
-    url:
+  - title: Contact
+    url: http://www.coasthomesales.com/member/contact/
 client:
   name: Bryan David
   title: Broker Associate
