--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,20 +1,24 @@
 audit_header: false
 title: The Real Estate Pros Video Blog
-description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Real Estate Pros - your professional Pendleton Area Real Estate Agents.'
+description: >-
+  If you are looking to buy or sell a home, get all the information and the
+  latest updates, tips, and tricks from The Real Estate Pros - your professional
+  Pendleton Area Real Estate Agents.
 show_custom_links: true
 custom_links:
   - title: Featured Listings
-    url: 'http://www.mlsfinder.com/in_mibor/heatherupton/index.cfm?action=searchresults&searchkey=ab85211b-d61c-01d1-cbd5-922bbf1938e0&domain=www.therealestatepros.us&nSite=N&so=a&sr=1'
+    url: >-
+      http://www.mlsfinder.com/in_mibor/heatherupton/index.cfm?action=searchresults&searchkey=ab85211b-d61c-01d1-cbd5-922bbf1938e0&domain=www.therealestatepros.us&nSite=N&so=a&sr=1
 client:
   name: Heather Upton
   license_number:
-  about_markdown: >
-    The Real Estate Pros team is a group of diverse REALTORS® coming together and
-    sharing their life experiences and lessons to the benefit their clients.
-    8 Full time agents and an Operations Manager work tirelessly on behalf of
-    fulfilling client dreams. Whether you want to sell your home and move up or
-    on or dream of finding the perfect home for you and your family, you can
-    trust The Real Estate Pros to put their all into assisting you.
+  about_markdown: >-
+    The Real Estate Pros team is a group of diverse REALTORS&reg; coming
+    together and sharing their life experiences and lessons to the benefit their
+    clients. 8 Full time agents and an Operations Manager work tirelessly on
+    behalf of fulfilling client dreams. Whether you want to sell your home and
+    move up or on or dream of finding the perfect home for you and your family,
+    you can trust The Real Estate Pros to put their all into assisting you.
   market: The Pendleton Area
   brand: The Real Estate Pros
   brokerage: Keller Williams
@@ -25,13 +29,19 @@ client:
   email: info@therealestatepros.com
   url: www.therealestatepros.com
   first_CTA_text: Home Evaluation
-  first_CTA_URL: 'http://www.therealestatepros.co/Sell/'
+  first_CTA_URL: 'http://www.therealestatepros.com/sell'
   second_CTA_text: Home Search
-  second_CTA_URL: 'http://www.therealestatepros.co/Search/'
+  second_CTA_URL: >-
+    http://www.therealestatepros.com/search#?q_limit=36&q_prioritize=agents.0.id=21499|office.id=KWIN05&mlsId=302&q_sort=createdAt-&q_offset=0
   phone_CTA: true
   VR_form: 'http://oi.vresp.com?fid=d341c72bac'
 welcome_headline: Get Educated About Real Estate
-welcome_text_markdown: 'Our mission at The Real Estate Pros is to be your best resource for real estate advice. Whether you are a buyer, seller, or investor, our team of professionals can answer any questions you might have about real estate. Subscribe to this blog to get the latest news on local market trends and receive expert tips for buying or selling a home.'
+welcome_text_markdown: >-
+  Our mission at The Real Estate Pros is to be your best resource for real
+  estate advice. Whether you are a buyer, seller, or investor, our team of
+  professionals can answer any questions you might have about real estate.
+  Subscribe to this blog to get the latest news on local market trends and
+  receive expert tips for buying or selling a home.
 socials:
   review_sm_icons: false
   facebook_url: 'https://www.facebook.com/therealestatepros1'
@@ -42,16 +52,29 @@ socials:
   instagram_url:
   pinterest_url: 'https://www.pinterest.com/therealestate4/'
   zillow_url: 'http://www.zillow.com/profile/Heather-Upton/'
-  trulia_url: 'https://www.trulia.com/profile/heather-upton-the-real-estate-pros-agent-pendleton-in-zghxx86d/overview'
+  trulia_url: >-
+    https://www.trulia.com/profile/heather-upton-the-real-estate-pros-agent-pendleton-in-zghxx86d/overview
   yelp_url:
-  podcast_url: 'https://itunes.apple.com/us/podcast/real-estate-pros-podcast-heather/id1181991689?mt=2'
+  podcast_url: >-
+    https://itunes.apple.com/us/podcast/real-estate-pros-podcast-heather/id1181991689?mt=2
 podcast:
   title: The Real Estate Pros Podcast with Heather Upton
   categories:
   image: /img/Upton_Podcast.jpg
-  subtitle: 'Learn all the tips, tricks and more for buyers and sellers in the Pendleton Area Area Real Estate Market'
-  description: 'If you are looking to buy or sell a home, get all the information and the latest updates, tips, and tricks from The Real Estate Pros - your professional Pendleton Area Real Estate Agents.'
-  keywords: 'Real Estate for sale, Real Estate agents, top real estate agents, local real estate agents, find a real estate agent, houses for sale in the Pendleton Area, home selling tips, home for sale, home buying, home buying process, property finder, property search, property, real estate market, estate agent, realestate, real estate listings, buying a house, homes for sale, mls, home buyer'
+  subtitle: >-
+    Learn all the tips, tricks and more for buyers and sellers in the Pendleton
+    Area Area Real Estate Market
+  description: >-
+    If you are looking to buy or sell a home, get all the information and the
+    latest updates, tips, and tricks from The Real Estate Pros - your
+    professional Pendleton Area Real Estate Agents.
+  keywords: >-
+    Real Estate for sale, Real Estate agents, top real estate agents, local real
+    estate agents, find a real estate agent, houses for sale in the Pendleton
+    Area, home selling tips, home for sale, home buying, home buying process,
+    property finder, property search, property, real estate market, estate
+    agent, realestate, real estate listings, buying a house, homes for sale,
+    mls, home buyer
   author: Heather Upton
 images:
   client_headshot_path: /img/headshot.jpg
