Updated '_data/settings.yml' via CloudCannon

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -72,7 +72,7 @@ socials:
   zillow_url:
   trulia_url:
   yelp_url: http://www.yelp.com/biz/abel-tejeda-american-mortgage-group-san-diego-2
-  podcast_url:
+  podcast_url: https://itunes.apple.com/us/podcast/san-diego-mortgage-podcast-with-abel-tejeda/id1291045797?mt=2
 
 podcast:
   title: '-- MARKET -- Mortgage Podcast with -- CLIENT NAME --'
