blogger posts added

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,5 +1,17 @@
-show_testimonials_section: false
+show_testimonials_section: true
 testimonial:
+  - quote: My results were very good! She was selling my home and helping me buy a house. The first weekend we had 45 showings and multiple offers so that was good. She listened to what I said because she was advising me when the first buyer pulled out to not give them what they were asking for but she also knew I wanted to move and I wanted the other house. And she helped me get the house I wanted at the price I wanted (to pay).  I had a lot of sewer problems (on the house I was selling) and I was about to lose my mind. I would refer to her as my “counselor” because she would call to check in and give advice on what to do; she was extremely helpful during that time because it was such a stressful process.  She gave me resources of people to call to get things looked at. She called me back right away! She was great!
+    name: Nancy Fortune, Home Buyer and Seller
+    audio: /uploads/audio/nancy.mp3
+  - quote: Excellent. It was a better experience than I could have really ever imagined. We came out, she looked over our house and told us things we needed to do. We put it on the market and sold it the next day. She made everything go really smoothly and easily for us. My husband and I both travel a lot for work, and it was around the holidays we were traveling. There were a few different things during the inspection that we needed to get done, and she coordinated all of that to get done with a contractor. She had it all fixed while we were out of town and we didn't have to do anything. She took care of everything, literally, everything for us!
+    name: Lara Reid, Home Seller
+    audio: /uploads/audio/lara.mp3
+  - quote:
+    name:
+    audio:
+  - quote:
+    name:
+    audio:
   - quote:
     name:
     audio:
