--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -6,12 +6,12 @@ testimonial:
   - quote: Excellent. It was a better experience than I could have really ever imagined. We came out, she looked over our house and told us things we needed to do. We put it on the market and sold it the next day. She made everything go really smoothly and easily for us. My husband and I both travel a lot for work, and it was around the holidays we were traveling. There were a few different things during the inspection that we needed to get done, and she coordinated all of that to get done with a contractor. She had it all fixed while we were out of town and we didn't have to do anything. She took care of everything, literally, everything for us!
     name: Lara Reid, Home Seller
     audio: /uploads/audio/lara.mp3
-  - quote:
-    name:
-    audio:
-  - quote:
-    name:
-    audio:
-  - quote:
-    name:
-    audio:
+  # - quote:
+  #   name:
+  #   audio:
+  # - quote:
+  #   name:
+  #   audio:
+  # - quote:
+  #   name:
+  #   audio:
